--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@storybook/react": "^7.0.18",
     "@storybook/testing-library": "^0.0.14-next.2",
     "eslint-plugin-storybook": "^0.6.12",
+    "sass": "^1.63.4",
     "storybook": "^7.0.18"
   }
 }
