--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@storybook/testing-library": "^0.0.14-next.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "chromatic": "^7.5.4",
     "eslint-plugin-storybook": "^0.6.12",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
