--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "rm -rd -f .next && next dev",
     "build": "next build",
     "test": "jest --watch",
+    "tests": "jest",
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
