--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.0.18",
-    "@storybook/addon-interactions": "^7.0.18",
-    "@storybook/addon-links": "^7.0.18",
-    "@storybook/blocks": "^7.0.18",
-    "@storybook/nextjs": "^7.0.18",
-    "@storybook/react": "^7.0.18",
+    "@storybook/addon-essentials": "^7.6.14",
+    "@storybook/addon-interactions": "^7.6.14",
+    "@storybook/addon-links": "^7.6.14",
+    "@storybook/addon-mdx-gfm": "^7.6.14",
+    "@storybook/blocks": "^7.6.14",
+    "@storybook/nextjs": "^7.6.14",
+    "@storybook/react": "^7.6.14",
     "@storybook/testing-library": "^0.0.14-next.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -42,7 +43,7 @@
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "sass": "^1.63.4",
-    "storybook": "^7.0.18"
+    "storybook": "^7.6.14"
   },
   "readme": "ERROR: No README data found!",
   "_id": "game-blog@0.1.0"
